--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "citizencareev-server-v1.0",
   "version": "1.0.0",
-  "description": "Starts server with DB in production mode , which will be on cloud ( currently unavailable, so not gonna work )\r helllooo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
+    "winston": "^3.13.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
