--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "set NODE_ENV=development && nodemon index.js",
+    "test": "NODE_ENV=test node index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
