--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
 PORT=5000
 DATABASE_URI=mongodb+srv://CitizenEV:kiDzpwtcgoTlPJiw@citizenev.vdaoafv.mongodb.net/?retryWrites=true&w=majority&appName=CitizenEV
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-email-password
+ADMIN_EMAIL=EMAIL_ID
