--- a/.env.productiom
+++ b/.env.productiom
@@ -1,2 +1,6 @@
 PORT=5000
 DATABASE_URI=mongodb+srv://CitizenEV:kiDzpwtcgoTlPJiw@citizenev.vdaoafv.mongodb.net/?retryWrites=true&w=majority&appName=CitizenEV
+EMAIL_SERVICE_PROVIDER=gmail
+EMAIL_ADMIN=your-email@gmail.com
+EMAIL_PASS=your-email-password
+ADMIN_EMAIL= xyz@xyz.com
