--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
-    "winston": "^3.13.1"
+    "winston": "^3.13.1",
+    "xss-clean": "^0.1.4"
   },
   "engines": {
     "node": "20.x"
